--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -25,7 +25,8 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
-                        <wm-liveform novalidate="false" errormessage="" title="Vendor Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1" formdata="bind:Variables.CurrentVendorObj.firstRecord">
+                        <wm-liveform novalidate="false" errormessage="" title="Vendor Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1" formdata="bind:Variables.CurrentVendorObj.firstRecord"
+                        class="panel-primary">
                             <wm-layoutgrid columns="3" name="layoutgrid1">
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn1">
@@ -118,6 +119,63 @@
                             <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" action="" disabled="false" type="submit" update-mode="true"></wm-form-action>
                         </wm-liveform>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow12_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn27">
+                        <wm-panel iconclass="wi wi-notepad" name="panel1" title="Licenses" class="panel-primary">
+                            <wm-livegrid formlayout="dialog" name="livegrid1">
+                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="Vendorlicenses List" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid1">
+                                    <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" related-entity-name="VendorLicenseTypes"></wm-grid-column>
+                                    <wm-grid-column binding="licenseNumber" caption="License Number" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
+                                    <wm-grid-column binding="issuedDate" caption="Issued Date" generator="assigned" pcdisplay="true" mobiledisplay="true" type="date"></wm-grid-column>
+                                    <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
+                                    <wm-grid-column binding="expirationDate" caption="Expiration Date" generator="assigned" pcdisplay="true" mobiledisplay="true" type="date"></wm-grid-column>
+                                    <wm-grid-column binding="scope" caption="Scope" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
+                                    <wm-grid-action key="addNewRow" display-name="New" iconclass="wi wi-plus" show="true" class="btn-primary" action="addNewRow()" position="footer" shortcutkey=""></wm-grid-action>
+                                    <wm-grid-row-action key="updaterow" display-name="" title="Edit" iconclass="wi wi-pencil" show="true" class="btn-transparent" action="editRow()"></wm-grid-row-action>
+                                    <wm-grid-row-action key="deleterow" display-name="" title="Delete" iconclass="wi wi-trash" show="true" class="btn-transparent" action="deleteRow()"></wm-grid-row-action>
+                                </wm-grid>
+                                <wm-liveform novalidate="false" errormessage="" title="Vendorlicenses Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.VendorLicensesData.dataSet" captionalign="left" captionposition="top" name="liveform2">
+                                    <wm-layoutgrid columns="2" name="layoutgrid3">
+                                        <wm-gridrow name="gridrow13">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn28_1">
+                                                <wm-form-field name="licenseNumber" displayname="License Number" show="true" primary-key="false" generator="assigned" key="licenseNumber" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn29">
+                                                <wm-form-field name="issuedDate" displayname="Issued Date" show="true" primary-key="false" generator="assigned" key="issuedDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow14">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn30">
+                                                <wm-form-field name="issuingAuthority" displayname="Issuing Authority" show="true" primary-key="false" generator="assigned" key="issuingAuthority" type="string" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn31">
+                                                <wm-form-field name="expirationDate" displayname="Expiration Date" show="true" primary-key="false" generator="assigned" key="expirationDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow15">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn32">
+                                                <wm-form-field name="scope" displayname="Scope" show="true" primary-key="false" generator="assigned" key="scope" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn33">
+                                                <wm-form-field name="vendor" displayname="Vendor" show="true" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" required="required" widget="select" placeholder="Select value"
+                                                defaultvalue="bind:Variables.CurrentVendorObj.firstRecord" dataset="bind:Variables.CurrentVendorObj.dataSet" datafield="All Fields" displayfield="companyName" orderby="companyName:desc"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow16">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn34">
+                                                <wm-form-field name="vendorLicenseTypes" displayname="Vendor License Types" show="true" primary-key="false" generator="assigned" key="vendorLicenseTypes" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                displayexpression="licenseType" orderby="licenseType:desc"></wm-form-field>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                </wm-liveform>
+                            </wm-livegrid>
+                        </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
